--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -62,6 +62,7 @@
 .btnMusic path {
   stroke: white;
 }
+
 input[type=range] {
   -webkit-appearance: none;
   margin: 10px 0;
@@ -73,6 +74,7 @@ input[type=range] {
 input[type=range]:focus {
   outline: none;
 }
+
 input[type=range]::-webkit-slider-thumb {
   border: 2px solid #000000;
   height: 1rem;
@@ -88,22 +90,24 @@ input[type=range]::-webkit-slider-thumb {
   .footer {
     font-size: x-small;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(4, auto);
     width: 100vw;
-    height: 5%;
+    height: 3%;
     position: absolute;
     bottom: 0;
   }
 
-  .toRetribucion{
-    grid-row: 3/4;
-  }
-
+  .backHome,
+  .formaNavegacion,
+  .toRetribucion,
   .toCreditos {
-    grid-row: 4/5;
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
   }
 
-  .audioPlayer{
+  .audioPlayer {
     display: none;
   }
 }
