--- a/src/components/ModalActoSentido.css
+++ b/src/components/ModalActoSentido.css
@@ -24,7 +24,7 @@
 
 .recomendacion {
     text-align: center;
-font-size: 4rem;
+    font-size: 4rem;
 }
 
 .textoRecomendacion {
@@ -38,7 +38,8 @@ font-size: 4rem;
     justify-content: center;
 }
 
-.back, .go {
+.back,
+.go {
     border-style: solid;
     border-color: black;
     border-width: 5px;
@@ -51,4 +52,58 @@ font-size: 4rem;
     height: 10%;
     width: 50%;
     text-align: center;
+}
+
+@media screen and (max-width: 640px) {
+    .contenedorModal {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: space-around;
+        align-items: center;
+        width: 80vw;
+        height: 35vh;
+        background: white;
+        position: absolute;
+        border-width: 5px;
+        border-style: solid;
+        border-color: black;
+        box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
+        padding: 5%;
+        margin: 0;
+    }
+
+    .recomendacion {
+        text-align: center;
+        font-size: 2.5rem;
+    }
+
+    .textoRecomendacion {
+        text-align: center;
+        font-size: 1rem;
+        margin: 1%;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 5%;
+        text-align: center;
+    }
+
+    .back {
+        height: 5vh;
+        width: 62vw;
+        font-size: 1rem;
+        margin: 2%;
+    }
+
+    .go {
+        width: 74vw;
+        height: 7vh;
+        font-size: 1rem;
+        margin: 2%;
+    }
 }
