--- a/src/routes/ContainerCategoria.css
+++ b/src/routes/ContainerCategoria.css
@@ -88,7 +88,7 @@
 
 .over {
     width: 50vw;
-    height: 60vh;
+    height: 70vh;
     background: white;
     border-width: 5px;
     border-style: solid;
@@ -97,14 +97,14 @@
     transform: translate(-50%, -50%);
     display: grid;
     grid-template-rows: 20% 80%;
-    grid-template-columns: 10% 80% 10%;
-    padding: 1% 0;
+    grid-template-columns: 100%;
+    padding: 3%;
     align-items: center;
     position: absolute;
 }
 
 .data {
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 1/2;
     cursor: default;
 }
@@ -121,11 +121,11 @@
 .close {
     border: none;
     background-color: rgba(0, 0, 0, 0.0);
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 1/2;
     font-size: 2rem;
-    position: relative;
-    left: 48%;
+    position: absolute;
+    right: 0;
     cursor: pointer;
 }
 
@@ -138,8 +138,105 @@
 .video {
     width: 90%;
     margin: auto 0;
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 2/3;
     background-color: black;
     padding: 1% 5%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.youTube{
+    margin: auto 0;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -10%);
+}
+
+@media screen and (max-width: 640px) {
+    .container {
+        width: 100%;
+        height: 100%;
+        align-items: center;
+    }
+
+    .vista {
+        display: grid;
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        grid-template-columns: 100%;
+        grid-template-rows: 5% 95%;
+        align-items: center;
+        justify-items: center;
+        justify-content: center;
+        align-content: center;
+        gap: 0;
+    }
+
+    .title {
+        top: 5%;
+    }
+
+    .containerCategoria {
+        display: grid;
+        grid-template: repeat(1, 1fr) / repeat(3, 1fr);
+        grid-auto-flow: row;
+        position: relative;
+        align-items: center;
+        justify-items: center;
+        align-content: center;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        height: 25%;
+        width: 80%;
+    }
+
+    .over {
+        width: 90vw;
+        height: 40vh;
+        background: white;
+        border-width: 5px;
+        border-style: solid;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: grid;
+        grid-template-rows: 30% 70%;
+        grid-template-columns: 100%;
+        padding: 2%;
+        align-items: center;
+        position: absolute;
+        justify-items: stretch;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .close {
+        border: none;
+        background-color: rgba(0, 0, 0, 0.0);
+        grid-column: 1/2;
+        grid-row: 1/2;
+        font-size: 2rem;
+        position: absolute;
+        right: 0;
+        cursor: pointer;
+    }
+
+    .video {
+        width: auto;
+        height: auto;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        background-color: black;
+        padding: 2% 5%;
+    }
+
+    .youTube{
+        width: auto;
+        height: auto;
+    }
 }
