--- a/src/routes/VistaCategorias.css
+++ b/src/routes/VistaCategorias.css
@@ -32,7 +32,7 @@
     font-size: 2.5rem;
     grid-row: 2/3;
     cursor: default;
-    bottom: 30%;
+    top: -30%;
     position: relative;
     border-width: 8px;
     border-style: solid;
@@ -101,7 +101,7 @@
         background-color: transparent;
     }
 
-    .titleCategoria {
+    .title {
         font-weight: 900;
         font-size: 2.5rem;
         justify-content: center;
