--- a/src/routes/VistaParticipantes.scss
+++ b/src/routes/VistaParticipantes.scss
@@ -35,6 +35,32 @@
   animation: b10 1s infinite linear;
 }
 
+
+.whiteLoading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  color: white;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 100%);
+}
+
+.wLoading {
+  position: relative;
+  height: 45px;
+  aspect-ratio: 1.2;
+  --c: no-repeat repeating-linear-gradient(90deg, rgb(255, 255, 255) 0 20%, #0000 0 40%);
+  background:
+    var(--c) 50% 0,
+    var(--c) 50% 100%;
+  background-size: calc(500%/6) 50%;
+  animation: b10 1s infinite linear;
+}
+
 .backArrow {
   grid-area: 1 / 1 / 2 / 2;
   text-decoration: none;
@@ -133,7 +159,7 @@
   font-size: 0.9rem;
   grid-row: 2/3;
   grid-column: 1/4;
-  top: 10%;
+  top: 7%;
   margin: 0 25%;
   position: absolute;
   cursor: default;
@@ -219,48 +245,12 @@
   grid-column: 3/4;
   grid-row: 2/3;
 }
-.data {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  cursor: default;
-}
-.containerModal {
-  width: 50vw;
-  height: 60vh;
-  background: white;
-  border-width: 5px;
-  border-style: solid;
-  margin: auto;
-  display: grid;
-  grid-template-rows: 20% 80%;
-  grid-template-columns: 20% 60% 20%;
-  padding: 1% 0;
-  align-items: center;
-}
-
-.backArrowModal {
-  border: none;
-  background-color: transparent;
-  grid-column: 2/3;
-  grid-row: 1/2;
-  font-size: 2rem;
-  position: relative;
-  left: 90%;
-  cursor: pointer;
-}
-
-.backArrowModal:hover {
-  transition: all .1s ease;
-  transform: translateX(-10px);
-  background-color: transparent;
-}
 
 .btnPlay {
   position: absolute;
   border: none;
   color: transparent;
   background-color: transparent;
-  z-index: 3;
 }
 
 @keyframes spin {
@@ -319,13 +309,12 @@
     width: 100%;
     height: 100%;
     align-items: center;
-    flex-wrap: wrap;
   }
 
   .containerVistaParticipantes {
     display: grid;
-    width: auto;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: 0;
     grid-template-columns: 100%;
     grid-template-rows: 5% 95%;
@@ -361,9 +350,8 @@
 
   .participantesContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-column-gap: 0;
-    grid-row-gap: 1%;
+    grid-template: repeat(1, 1fr) / repeat(3, 1fr);
+    grid-auto-flow: row;
     position: relative;
     align-items: center;
     justify-items: center;
@@ -372,28 +360,7 @@
     grid-row: 2/3;
     height: 25%;
     width: 80%;
-    top: 10%;
   }
-
-  .bckArrow {
-    color: black;
-    position: relative;
-    grid-column: 3/4;
-    grid-row: 1/2;
-    font-size: 2rem;
-  }
-
-  .personaContainer {
-    width: auto;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 10% 80% 10%;
-    grid-template-rows: 5% 30% 10% 50% 5%;
-    align-items: center;
-    justify-items: center;
-    align-content: center;
-  }
-
   .participante {
     height: 100%;
   }
@@ -402,12 +369,31 @@
     width: 100px;
   }
 
+  .bckArrow {
+    color: black;
+    position: relative;
+    font-size: 2rem;
+    margin: 0;
+  }
+
+
+  .personaContainer {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-content: center;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
   .cuña {
     text-align: center;
-    font-size: 0.7rem;
-    margin: 0;
-    grid-row: 3/4;
-    grid-column: 2/3;
+    font-size: 0.5rem;
+    margin: 0 5%;
+    top: 45%;
+    position: relative;
   }
 
   .categoriasIzq {
@@ -417,61 +403,75 @@
     margin: 0;
   }
 
-  .infoPersona {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  .info {
+    display: grid;
     align-items: center;
-    grid-column: 2/3;
-    grid-row: 3/4;
-  }
-
-  .nombrePersona {
-    /* display: flex; */
-    font-weight: 900;
-    font-size: 2.25rem;
     justify-content: center;
-    padding: 0.5rem 1rem;
-    border-width: 4px;
-    border-style: solid;
-    border-color: black;
-    margin: 0 35rem;
-    text-transform: uppercase;
+    justify-items: center;
+    height: auto;
+    position: absolute;
+    top: 8%;
   }
 
   .imgPersona {
     border-style: solid;
     border-color: black;
-    border-width: 4px;
-    height: 25rem;
-    width: 25rem;
+    border-width: 8px;
+    height: 300px;
+    width: 300px;
     padding: 0.5rem;
-  }
+    top: 5%;
+    position: relative;
+}
+
+.name {
+  font-weight: 900;
+  font-size: 1.5rem;
+  padding: 1% 5%;
+  border-width: 8px;
+  border-style: solid;
+  border-color: black;
+  text-transform: uppercase;
+  cursor: default;
+  background-color: white;
+  grid-row: 1/2;
+  position: absolute;
+  top: 15%;
+}
+
+.categoriasIzq{
+  display: flex;
+    margin: 0;
+    position: absolute;
+    top: 65%;
+    left: 10%;
+}
 
   .categoriasDer {
-    grid-column: 2/3;
-    grid-row: 4/5;
     display: flex;
     margin: 0;
+    top: 65%;
+    left: 55%;
+    position: absolute;
   }
 
   .categoria {
     display: flex;
-    justify-content: center;
-    margin: 3.5rem 0;
-    padding: 1rem 0;
+    margin: 10% 2%;
+    padding: 2%;
     border-style: solid;
     border-color: black;
-    border-width: 8px;
-    font-size: 2rem;
+    border-width: 5px;
+    font-size: 1rem;
     font-weight: 900;
-    width: 20rem;
+    width: 10rem;
+    height: 3rem;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
   }
 
-  .footer {
-    grid-column: 1/4;
-    grid-row: 4/5;
-  }
 
   .categoria:visited {
     color: black;
