--- a/app/navegacion/navegacion.css
+++ b/app/navegacion/navegacion.css
@@ -18,7 +18,7 @@
   cursor: default;
 }
 
-.btnNavigation {
+#btnNavigation {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -56,7 +56,7 @@
     text-align: center;
   }
 
-  .btnNavigation {
+  #btnNavigation {
     display: flex;
     flex-direction: column;
     text-align: center;
