intro ajuste tamaño fuentes

--- a/app/intro/Intro.css
+++ b/app/intro/Intro.css
@@ -11,3 +11,11 @@
   background-color: black;
   color: white;
 }
+
+.textoIntro {
+  font-size: x-large;
+}
+
+#nosCambian {
+  font-size: xxx-large;
+}
