--- a/app/instrucciones/instrucciones.css
+++ b/app/instrucciones/instrucciones.css
@@ -14,6 +14,8 @@
 }
 
 #btnComenzarLink {
+  background-position: center;
+  transition: all 0.2s ease-out;
   color: black;
   font-weight: 900;
   font-size: 2.25rem;
@@ -23,4 +25,19 @@
   margin: 1%;
   padding: 2rem;
   text-decoration: none;
+}
+
+#btnComenzarLink:hover {
+  background: #000000f5 radial-gradient(circle, transparent 1%, #80808013 1%) center/15000%;
+  color: white;
+  border: 4px solid rgb(22, 22, 22);
+  text-transform: uppercase;
+  text-decoration: underline overline;
+  text-align: left;
+}
+
+#btnComenzarLink:active {
+  color: black;
+  background-color: #00000013;
+  background-size: 100%;
 }
