--- a/components/Flechas.css
+++ b/components/Flechas.css
@@ -16,7 +16,15 @@
   outline: none;
   font: inherit;
   color: inherit;
-  background: none
+  background: none;
+  position: absolute;
+  right: 2%;
+  top: 2%;
+}
+
+#btnArrow:hover {
+  transition: all .1s ease;
+  transform: translateX(10px);
 }
 
 .flechasInicio {
