--- a/app/navegacion/(vistas)/Vistas.css
+++ b/app/navegacion/(vistas)/Vistas.css
@@ -6,41 +6,32 @@ html, body, section {
   display: flex;
   flex-direction: column;
   text-align: center;
-  height: 90%;
+  height: 90%
 }
 
 #containerVistaCategoria {
   height: 100%;
 }
 
-.titleCategoria {
-  height: 30%;
+#contenido-categoria {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  padding: 20px;
-  font-weight: 900;
-  color: black;
-  font-weight: 900;
-  font-size: 2.5rem;
-  cursor: default;
+  flex-direction: row;
 }
 
-.titleCategoria h2 {
+.titleCategoria {
+  width: 200px;
   padding: 10px;
   border-color: black;
-  border-width: 8px;
+  border-width: 6px;
   border-style: solid;
 }
 
 .colContainer {
   display:flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 80%;
+  height: 100%;
   justify-content: center;
 }
 
@@ -74,17 +65,49 @@ html, body, section {
   border: 6px solid black;
 }
 
-@media screen and (max-width: 810px) {  
-  .column {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      gap: 20px;
+iframe {
+  height: 360px;
+  width: 640px;
+}
+
+@media screen and (max-width: 820px) {
+  #contenido-categoria {
+    display: flex;
+    flex-direction: column;
   }
 
-  footer {
-      padding:1rem;
-      padding-top: 20px;
-      margin-top: 20px;
+  .ctgr {
+    border-width: 4px;
+    width: 160px;
+    font-size: 1.5rem;
+    padding: 10px;
+    text-decoration: none;
+    justify-content: center;
+  }
+
+  iframe {
+    height: 270px;
+    width: 480px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  iframe {
+    height: 240px;
+    width: 426px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  iframe {
+    height: 168px;
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  iframe {
+    height: auto;
+    width: 240px;
   }
 }
