--- a/app/navegacion/(vistas)/categorias/categoria.module.css
+++ b/app/navegacion/(vistas)/categorias/categoria.module.css
@@ -6,11 +6,12 @@
   gap: 5% 2%;
 }
 
-@media screen and (max-width: 660px) {     
+@media screen and (max-width: 820px) {     
   .row {
     position: relative;
     grid-template: repeat(1,1fr) / repeat(1,1fr);
-    align-content: center;
-    padding: 100px 200px 100px 200px;
+    gap: 2%;
+    padding: 0;
+    margin: 0;
   }
 }
