--- a/app/navegacion/(vistas)/participantes/participantes.module.css
+++ b/app/navegacion/(vistas)/participantes/participantes.module.css
@@ -6,11 +6,21 @@
   gap: 5% 2%;
 }
 
-@media screen and (max-width: 810px) {  
+@media screen and (max-width: 820px) {  
   .tilesContainer {
       position: relative;
       grid-template: repeat(1,1fr) / repeat(3,1fr);
-      align-content: center;
-      padding: 100px 200px 100px 200px;
+      height: 100%;
+      padding: 20px 10px 20px 10px;
+      overflow: scroll;
+  }
+}
+
+@media screen and (max-width: 280px) {  
+  .tilesContainer {
+      grid-template: repeat(1,1fr) / repeat(2,1fr);
+      height: 100%;
+      padding: 20px 10px 20px 10px;
+      overflow-y: scroll;
   }
 }
