--- a/components/ModalActosentido.css
+++ b/components/ModalActosentido.css
@@ -25,7 +25,7 @@
   width: 36%;
   padding: 10px;
   font-weight: bold;
-  font-size: larger;
+  font-size: large;
 }
 
 .btnModal:hover {
@@ -34,4 +34,103 @@
 
 .btnModal:active {
   background-color: rgba(128, 128, 128, 0.37);
+}
+
+@media screen and (max-width: 640px) {
+  #modalContainer h2 {
+    font-size: 2rem;
+    font-weight:bolder;
+    text-align: center;
+  }
+  
+  #modalText {
+    text-align: left;
+    font-weight: bolder;
+    font-size: large;
+    line-height: 1.2em;
+    padding: 4%;
+  }
+  
+  #modalBtns {
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+  }
+  
+  .btnModal {
+    border: 4px solid black;
+    color: black;
+    background-color: white;
+    width: 45%;
+    padding: auto;
+    font-weight: bold;
+    font-size: large;
+  }
+  
+}
+
+@media screen and (max-width: 400px) {
+  #modalContainer h2 {
+    font-size: 1.5rem;
+    font-weight:bold;
+    text-align: center;
+  }
+  
+  #modalText {
+    text-align: left;
+    font-weight: normal;
+    font-size: large;
+    line-height: 1em;
+    padding: 10% 1% 10% 1%;
+  }
+  
+  #modalBtns {
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    margin-bottom: 10%;
+  }
+  
+  .btnModal {
+    border: 3px solid black;
+    color: black;
+    background-color: white;
+    width: 40%;
+    padding: 2px;
+    font-weight: bold;
+    font-size: small;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  #modalContainer h2 {
+    font-size: 1.2rem;
+    font-weight:bold;
+    text-align: center;
+  }
+  
+  #modalText {
+    text-align: left;
+    font-weight: normal;
+    font-size: medium;
+    line-height: 1em;
+    padding: 10% 1% 10% 1%;
+  }
+  
+  #modalBtns {
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    margin-bottom: 10%;
+  }
+  
+  .btnModal {
+    border: 3px solid black;
+    color: black;
+    background-color: white;
+    width: 48%;
+    padding: 2px;
+    font-weight: bold;
+    font-size: small;
+  }
 }
