--- a/app/navegacion/(vistas)/Vistas.css
+++ b/app/navegacion/(vistas)/Vistas.css
@@ -33,6 +33,7 @@ html, body, section {
   width: 100%;
   height: 100%;
   justify-content: center;
+  overflow-y: scroll;
 }
 
 .column {
@@ -69,20 +70,51 @@ html, body, section {
   transform: translateY(-5px)
 }
 
+#contenedor-grupo-iframe {
+  padding: 10px;
+}
+
+#contenedor-nombre-participante {
+  display: flex;
+  justify-content: center;
+}
+
+#nombre-participante {
+  background-color: white;
+  border: 4px solid black;
+  width: fit-content;
+  padding: 0 10px 0 10px;
+  position: relative;
+  top: 40px;
+}
 
 iframe {
   height: 700px;
   width: 1280px;
 }
 
-@media screen and (max-width: 1400px) {
+#iframe-participante {
+  padding: 6px;
+  border: 4px solid black;
+}
+
+#cuna {
+  display: block;
+  background-color: white;
+  margin-top: 120px;
+  width: 1280px;
+  font-size: large;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 2000px) {
   iframe {
     height: 360px;
     width: 640px;
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1368px) {
   #contenido-categoria {
     display: flex;
     flex-direction: column;
@@ -101,12 +133,24 @@ iframe {
     height: 270px;
     width: 480px;
   }
+
+  #cuna {
+    display: block;
+    background-color: white;
+    width: 480px;
+    font-size: small;
+    margin-top: 100px;
+  }
 }
 
 @media screen and (max-width: 540px) {
   iframe {
     height: 240px;
     width: 426px;
+  }
+
+  #cuna {
+    display: none;
   }
 }
 
