fix btn comenzar el viaje

--- a/app/instrucciones/instrucciones.css
+++ b/app/instrucciones/instrucciones.css
@@ -36,12 +36,10 @@
   background: #000000f5;
   color: white;
   border: 4px solid rgb(22, 22, 22);
-  text-transform: uppercase;
-  text-align: left;
+  transform: translateY(-5px);
 }
 
 #btnComenzarLink:active {
   color: black;
   background-color: #00000013;
-  background-size: 100%;
 }
