--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,9 @@ a {
   text-decoration: none;
   color: white;
 }
+
+.column-section {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
