--- a/components/Flechas.css
+++ b/components/Flechas.css
@@ -27,10 +27,11 @@
   transform: translateX(10px);
 }
 
-.flechasInicio {
-  position: absolute;
-  right: 2%;
-  bottom: 2%;
+.flechasInicio, .arrowForward {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
 }
 
 .flechasInicio:hover {
@@ -42,10 +43,6 @@
 @media screen and (max-width: 640px) {
   .arrowForward {
       color: black;
-      position: relative;
-      padding: 0;
-      right: 0;
-      top: 10%
   }
 }
 
