--- a/app/intro/Intro.css
+++ b/app/intro/Intro.css
@@ -18,7 +18,7 @@
 }
 
 #nosCambian {
-  font-size: xx-large;
+  font-size: xxx-large;
 }
 
 .black-background {
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 800px) {
   #nosCambian {
-    font-size: x-large;
+    font-size: xx-large;
   }
 }
 
