--- a/app/navegacion/(vistas)/CategoriaIndividual.css
+++ b/app/navegacion/(vistas)/CategoriaIndividual.css
@@ -1,6 +1,6 @@
 #container-individual {
   border: 4px solid black;
-  padding: 40px;
+  padding: 0 40px 0 40px;
 }
 
 #franja-texto {
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 420px) {
   #container-individual {
-    padding: 10px;
+    padding: 0 10px 0 10px;
     display: flex;
     flex-direction: column;
   }
