--- a/components/Flechas.css
+++ b/components/Flechas.css
@@ -15,16 +15,20 @@
   border: none;
   outline: none;
   font: inherit;
+  transition: all .1s ease;
+  position: relative;
+  right: 10px;
   color: inherit;
   background: none;
-  position: absolute;
-  right: 2%;
-  top: 2%;
 }
 
 #btnArrow:hover {
   transition: all .1s ease;
-  transform: translateX(10px);
+  transform: translateX(-10px);
+}
+
+#btnArrow:active {
+  transform: translateX(20px);
 }
 
 .flechasInicio, .arrowForward {
